feat: Add QuestionCard component for displaying questions with AI and video solutions
feat: Implement VideoSolutionModal for displaying video solutions related to questions

feat: Create AdminDashboard for managing faculty approvals and viewing analytics

feat: Develop FacultyDashboard for faculty to manage papers and upload new ones

feat: Build PaperViewer to display paper details and associated questions

feat: Create SavedItems page for users to access their saved papers and questions

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,16 @@
 MONGODB_URL=mongodb://localhost:27017
 DATABASE_NAME=examverse
 SECRET_KEY=your-secret-key-here-change-this-in-production
+
+# File Upload Configuration
+UPLOAD_DIR=uploads
+MAX_FILE_SIZE=10485760
+
+# OCR Configuration
+OCR_SPACE_API_KEY=your-ocr-space-api-key
+
+# Google Gemini AI
+GEMINI_API_KEY=your-gemini-api-key
+
+# YouTube API
+YOUTUBE_API_KEY=your-youtube-api-key
