feat: Update environment configuration and add health check endpoint for deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,26 @@
+# Required - MongoDB Connection
 MONGODB_URL=mongodb://localhost:27017
+# For MongoDB Atlas (Production): mongodb+srv://username:password@cluster.mongodb.net/
+
 DATABASE_NAME=examverse
+
+# Required - JWT Secret (generate a strong random string for production)
 SECRET_KEY=your-secret-key-here-change-this-in-production
 
 # File Upload Configuration
 UPLOAD_DIR=uploads
 MAX_FILE_SIZE=10485760
 
-# OCR Configuration
+# CORS - Allowed Origins (comma-separated URLs)
+# Development: * (allow all)
+# Production: https://your-frontend.onrender.com,https://your-custom-domain.com
+ALLOWED_ORIGINS=*
+
+# Optional - OCR Configuration
 OCR_SPACE_API_KEY=your-ocr-space-api-key
 
-# Google Gemini AI
+# Optional - Google Gemini AI
 GEMINI_API_KEY=your-gemini-api-key
 
-# YouTube API
+# Optional - YouTube API
 YOUTUBE_API_KEY=your-youtube-api-key
